--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <center data-parsed>
             
             <table align="center" class="container float-center"><tbody><tr><td>
-                <table class="row header"><tbody><tr style="background: #9f2125">
+                <table class="row header"><tbody><tr style="background-image: url(images/pattern.jpg);">
                     <th class="small-12 large-12 columns first last"><table><tr><th>
                         <center data-parsed>
                             <table class="float-center"><tbody><tr><td>&#xA0;</td></tr></tbody></table> 
@@ -46,6 +46,7 @@
                 </tr></tbody></table>
                 <table class="row"><tbody><tr>
                     <p class="heading text-center">POPULAR PRODUCTS</p>
+                    <p class="sub-heading text-center noto" style="padding-bottom: 10px;">Order Now before the stock last</p>
                     <th class="small-12 large-4 columns first"><table><tr><th>
                         <img src="images/product1.jpg">
                         <p class="title text-center noto">Hanumanji Car Frame</p>
@@ -77,6 +78,7 @@
                 </tr></tbody></table>
                 <table class="row"><tbody><tr>
                     <p class="heading text-center">TRENDING PRODUCTS</p>
+                    <p class="sub-heading text-center noto">Wall Arts</p>
                     <th class="small-12 large-6 columns first"><table><tr><th>
                         <img src="images/product4.jpg">
                         <p class="title text-center noto">Double Glass Tree of Life</p>
