--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </tr></tbody></table>
                 <table class="content row collapse"><tbody><tr>
                     <th class="small-12 large-12 columns first padding_b"><table><tr><th>
-                        <img src="images/banner1.jpg">
+                        <a href="https://bit.ly/3a5LJdS"><img src="images/banner1.jpg"></a>
                     </th></tr></table></th>
                    
                 </tr></tbody></table>
@@ -64,7 +64,7 @@
                     
                     <th class="small-12 large-12 columns last padding_b"><table><tr><th>
                         <center data-parsed>
-                            <img src="images/banner2.jpg" align="center" class="float-center">
+                            <a href="https://bit.ly/3a5LJdS"><img src="images/banner2.jpg" align="center" class="float-center"></a>
                         </center>
                     </th></tr></table></th>
                 </tr></tbody></table>
